--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -44,7 +44,7 @@
                   </span>
                 </div>
                 <div class="col-6 text-right">
-                  <a id="" href="">Olvido su contraseña?</a>
+                  <a id="" href="#">Olvido su contraseña?</a>
                 </div>
               </div>
               <div class="text-center">
