--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -76,12 +76,12 @@
           <a href="{% url 'producto:lista'%}" class="btn btn-block btn-primary">Seguir comprando</a>
         </div>
         <div class="col-sm-3 col-md-3 text-right">
-          <a href="#" class="btn btn-block btn-success">Seguir comprando</a>
+          <a href="#" class="btn btn-block btn-success">Finalizar compra</a>
         </div>
         <div class="col-sm-3 col-md-3 text-right">
           <form action="{% url 'cart:clear' %}" method="post">
             {% csrf_token %}
-            <input class="btn btn-block btn-danger" type="submit" value="Clear cart">
+            <input class="btn btn-block btn-danger" type="submit" value="Vaciar carrito">
           </form>
         </div>
       </div>
