Add Order app and templates

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -76,7 +76,7 @@
           <a href="{% url 'producto:lista'%}" class="btn btn-block btn-primary">Seguir comprando</a>
         </div>
         <div class="col-sm-3 col-md-3 text-right">
-          <a href="#" class="btn btn-block btn-success">Finalizar compra</a>
+          <a href="{% url 'order:create' %}" class="btn btn-block btn-success">Realizar pedido</a>
         </div>
         <div class="col-sm-3 col-md-3 text-right">
           <form action="{% url 'cart:clear' %}" method="post">
