--- a/store/templates/bases/base.html
+++ b/store/templates/bases/base.html
@@ -5,12 +5,26 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{% block title %}Title{% endblock %}</title>
-  <meta name="robots" content="index, follow" />
-  <meta name="description" content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+  <link rel="icon" type="image/png" href="{% static 'store/images/favicon.png' %}" sizes="64x64">
+  <!-- Description -->
+  <meta name="author" content="Diego Osvaldo" />
+  <meta name="description" content="Jaguarete Kaa, Ecommerce & Shopping Site" />
+  <meta name="keywords" content="Jaguarete, Jaguar, Ecommerce, Shopping, marketing, e-commerce, ecomm, e-comm, shop, e-shop, store, market, market place, place, diego, osvaldo, diego osvaldo, diego cruz" />
+  <meta name="Resource-type" content="Document" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Open Graph data -->
+  <meta property="og:site_name" content="Jaguarete Kaa" />
+  <meta property="og:title" content="Jaguarete Kaa | Ecommerce & Shopping Site" />
+  <meta property="og:description" content="Jaguarete Kaa, Ecommerce & Shopping Site" />
+  <meta property="og:image" content="{% static 'store/images/thumbnail.jpg'%}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jaguarete.diegoosvaldo.me/" />
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'store/images/favicon.png' %}" />
+  <!-- Title -->
+  <title>{% block title %}Title{% endblock %}</title>
   <!-- CSS -->
   <link rel="stylesheet" href="{% static 'store/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="{% static 'store/css/font-awesome.min.css' %}" />
