--- a/store/templates/store/buscar.html
+++ b/store/templates/store/buscar.html
@@ -1,78 +1,115 @@
 {% extends 'bases/base.html' %}
 {% load static %}
 {% block title %}Jaguarete Kaa - Productos{% endblock %}
-{% block section %}
-<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading">Buscar: {{filtro}}</h1>
-    <p class="lead text-muted mb-0">Le Lorem Ipsum est simplement du faux.</p>
-  </div>
-</section>
-{% endblock %}
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="{% url 'store:home'%}">Home</a></li>
-          <li class="breadcrumb-item"><a href="{% url 'producto:lista'%}">Productos</a></li>
-          <li class="breadcrumb-item active" aria-current="page">{{filtro}}</li>
-        </ol>
-      </nav>
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-12 col-sm-3">
-      <div class="card bg-light mb-3">
-        <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-list"></i>
-          Categorias</div>
-        <ul class="list-group category_block">
-          {% for cat in categories %}
-          <a class="text-decoration-none list-group-item list-group-item-light {% if categoria == cat %}active{% endif %}" href="{{ cat.get_absolute_url }}">
-            {{cat}}
-          </a>
-          {% endfor %}
-        </ul>
+<main class="main-content">
+  <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
+    <div class="container h-100">
+      <div class="row h-100">
+        <div class="col-lg-12">
+          <div class="breadcrumb-item">
+            <h2 class="breadcrumb-heading">Productos</h2>
+            <ul>
+              <li>
+                <a href="{% url 'store:home' %}">Home</a>
+              </li>
+              <li>Lista de productos</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col">
+  </div>
+  <div class="shop-area section-space-y-axis-100">
+    <div class="container">
       <div class="row">
-        {% for p in page_obj %}
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card mb-3">
-            <img class="card-img-top" src="{{p.imagen.url}}" alt="{{p.nombre}}">
-            <div class="card-body">
-              <h4 class="card-title text-primary">{{p.nombre}}</h4>
-              <p class="card-text">{{p.descripcion|safe|truncatechars:"50"}}</p>
-              <div class="row">
-                <div class="col">
-                  <p class="btn btn-danger btn-block disabled">{{p.precio}} $us.</p>
-                </div>
-                <div class="col">
-                  <a href="{{p.get_absolute_url}}" class="btn btn-info btn-block">Ver detalle</a>
-                </div>
+        <div class="col-xl-3 col-lg-4 order-2 order-lg-1 pt-5 pt-lg-0">
+          <div class="sidebar-area">
+            <div class="widgets-area">
+              <div class="widgets-item pt-0">
+                <h2 class="widgets-title mb-4">Categorias</h2>
+                <ul class="widgets-category">
+                  <li>
+                    <a href="{% url 'producto:lista'%}">
+                      <i class="fa fa-chevron-right"></i>
+                      Todas
+                    </a>
+                  </li>
+                  {% for cat in categories %}
+                  <li>
+                    <a class="{% if categoria == cat %}selection{% endif %}" href="{{ cat.get_absolute_url }}">
+                      <i class="fa fa-chevron-right"></i>
+                      {{cat|title}}
+                    </a>
+                  </li>
+                  {% endfor %}
+                </ul>
               </div>
             </div>
           </div>
         </div>
-        {% empty %}
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card mb-3">
-            <img class="card-img-top" src="/media/img/nn.png" alt="NN">
-            <div class="card-body">
-              <p class="card-text">No existen prodructos.</p>
+        <div class="col-xl-9 col-lg-8 order-1 order-lg-2">
+          <div class="tab-content">
+            <div class="tab-pane fade show active" id="grid-view" role="tabpanel" aria-labelledby="grid-view-tab">
+              <div class="product-grid-view row g-y-20">
+                {% for p in page_obj %}
+                <div class="col-md-4 col-sm-6">
+                  <div class="product-item">
+                    <div class="product-img">
+                      <img class="primary-img" src="{{p.imagen.url}}" alt="" width="186px" height="140">
+                      <div class="product-add-action">
+                        <ul>
+                          <li>
+                            <a href="#" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                              <i class="pe-7s-like"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                              <i class="pe-7s-look"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                              <i class="pe-7s-cart"></i>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="product-content">
+                      <a class="product-name" href="{{p.get_absolute_url}}">{{p.nombre}}</a>
+                      <div class="price-box pb-1">
+                        <span class="new-price">${{p.precio}}</span>
+                      </div>
+                      <div class="rating-box">
+                        <ul>
+                          <li><i class="fa fa-star"></i></li>
+                          <li><i class="fa fa-star"></i></li>
+                          <li><i class="fa fa-star"></i></li>
+                          <li><i class="fa fa-star"></i></li>
+                          <li><i class="fa fa-star"></i></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% empty %}
+                <div class="col-12">
+                  <img class="primary-img" src="{% static 'store/images/no-product-found.png'%}" alt="" width="100%">
+                </div>
+                {% endfor %}
+              </div>
             </div>
           </div>
+          <div class="pagination-area">
+            {% if page_obj.has_other_pages %}
+            {% include 'includes/pagination.html' %}
+            {% endif %}
+          </div>
         </div>
-        {% endfor %}
       </div>
-      {% if page_obj.has_other_pages %}
-      {% include 'includes/pagination.html' %}
-      {% endif %}
     </div>
   </div>
-</div>
+</main>
 {% endblock %}
