--- a/templates/registration/registro.html
+++ b/templates/registration/registro.html
@@ -1,97 +1,98 @@
 {% extends 'bases/base.html' %}
 {% load static %}
 {% block title %}Jaguarete Kaa - Resgister{% endblock %}
-{% block section %}
-<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading">Registro de usuarios</h1>
-    <p class="lead text-muted mb-0">Llene todos los campos</p>
-  </div>
-</section>
-{% endblock %}
 {% block content %}
 <form method="post" action="{% url 'users:register' %}" enctype="multipart/form-data">
   {% csrf_token %}
-  {% for campo in form %}
-    {% for error in campo.errors %}
-    <p style="color: red">{{ error }}</p>
-    {% endfor %}
-  {% endfor %}
-  <div class="row">
-    <div class="col-12">
-      <div class="rounded shadow-lg bg-white">
-        <div class="row p-3 p-lg-4">
-          <div class="col-12 col-md-6 ">
-            <div class="p-3 p-lg-4 rounded border ">
-              <h4 class="mb-3 mb-lg-4">Informacion Personal</h4>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Nombres</label>
-                <div class="col-lg-8">
+  <main class="main-content">
+    <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
+      <div class="container h-100">
+        <div class="row h-100">
+          <div class="col-lg-12">
+            <div class="breadcrumb-item">
+              <h2 class="breadcrumb-heading">Nuevo usuario</h2>
+              <ul>
+                <li>
+                  <a href="{% url 'store:home' %}">Home</a>
+                </li>
+                <li>Registro</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="login-register-area section-space-y-axis-100">
+      <div class="container">
+        <div class="row">
+          {% for campo in form %}
+          {% for error in campo.errors %}
+          <p style="color: red">{{ error }}</p>
+          {% endfor %}
+          {% endfor %}
+          <div class="col-lg-6">
+            <div class="login-form">
+              <h4 class="login-title">Datos Personales</h4>
+              <div class="row">
+                <div class="col-lg-6">
+                  <label>Nombres*</label>
                   {{form.first_name}}
                 </div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Apellidos</label>
-                <div class="col-lg-8">{{form.last_name}}</div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Direccion</label>
-                <div class="col-lg-8">{{form.direction}}</div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Pais</label>
-                <div class="col-lg-8">{{form.country}}</div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Telefone</label>
-                <div class="col-lg-8">{{form.telephone}}</div>
-              </div>
-              <div class="form-group row mb-1">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Avatar</label>
-                <div class="col-lg-8">{{form.avatar}}</div>
+                <div class="col-lg-6">
+                  <label>Apellidos</label>
+                  {{form.last_name}}
+                </div>
+                <div class="col-lg-12">
+                  <label>Dirección</label>
+                  {{form.direction}}
+                </div>
+                <div class="col-lg-6">
+                  <label>País</label>
+                  {{form.country}}
+                </div>
+                <div class="col-lg-6">
+                  <label>Teléfono</label>
+                  {{form.telephone}}
+                </div>
+                <div class="col-lg-12">
+                  <label>Avatar</label>
+                  {{form.avatar}}
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 mt-3 mt-md-0">
-            <div class="p-3 p-lg-4 rounded border">
-              <h4 class="mb-3 mb-lg-4">Info de Usuario</h4>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Username</label>
-                <div class="col-lg-8">{{form.username}}</div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Email</label>
-                <div class="col-lg-8">{{form.email}}</div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Password</label>
-                <div class="col-lg-8">{{form.password1}}</div>
-              </div>
-              <div class="form-group row mb-2">
-                <label class="col-lg-4 col-form-label mb-2 mb-lg-0">
-                  Confirmar Pass</label>
-                <div class="col-lg-8">{{form.password2}}</div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12 mt-2 mb-lg-4">
-                <button type="submit" class="btn btn-lg btn-primary">Registrar</button>
-                <a href="{% url 'store:home'%}" class="btn btn-lg btn-danger">Cancel</a>
+          <div class="col-lg-6 pt-5 pt-lg-0">
+            <div class="login-form">
+              <h4 class="login-title">User Info</h4>
+              <div class="row">
+                <div class="col-md-6 col-12">
+                  <label>Username</label>
+                  {{form.username}}
+                </div>
+                <div class="col-md-12">
+                  <label>Email Address*</label>
+                  {{form.email}}
+                </div>
+                <div class="col-md-6">
+                  <label>Password</label>
+                  {{form.password1}}
+                </div>
+                <div class="col-md-6">
+                  <label>Confirm Password</label>
+                  {{form.password2}}
+                </div>
+                <div class="col-6">
+                  <button type="submit" class="btn btn-custom-size lg-size btn-pronia-primary">Registrar</button>
+                </div>
+                <div class="col-6">
+                  <a href="{% url 'store:home'%}" class="btn btn-custom-size lg-size btn-pronia-secondary">Cancel</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </form>
 {% endblock %}
