--- a/store/templates/includes/footer.html
+++ b/store/templates/includes/footer.html
@@ -100,7 +100,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="copyright">
-            <span class="copyright-text">© 2021 Jaguarete Kaa S.A. Made with <i class="fa fa-heart text-danger"></i> by
+            <span class="copyright-text">© 2021 Jaguarete Kaa S.A. Developed with <i class="fa fa-heart text-danger"></i> by
               <a href="https://diegoosvaldo.me/" rel="noopener" target="_blank">diegoosvaldo85</a> </span>
           </div>
         </div>
