--- a/store/templates/includes/header-modal.html
+++ b/store/templates/includes/header-modal.html
@@ -8,7 +8,7 @@
       </div>
       <div class="modal-body">
         <div class="modal-search">
-          <span class="searchbox-info">Presione Enter para buscar o ESC para cerrar</span>
+          <span class="searchbox-info">Presione Enter para buscar o Esc para cerrar</span>
           <form method='GET' action='/buscar/' class="hm-searchbox">
             <input id="f" name="f" type="text" value="Buscar" onblur="if(this.value==''){this.value='Buscar'}" onfocus="if(this.value=='Buscar'){this.value=''}" autocomplete="off">
             <button class="search-btn" type="submit" aria-label="searchbtn">
