--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,16 @@
-{% extends "registration/layout.html" %}
-
+{% extends 'bases/base.html' %}
+{% load static %}
+{% block title %}Jaguarete Kaa - Reset Complete{% endblock %}
 {% block content %}
-
-<h1>Ha cambiado su contraseña</h1>
-<p><a href="{% url 'login' %}">¿Acceder nuevamente?</a></p>
-
+<div class="shop-area section-space-y-axis-100">
+  <div class="container">
+    <div class="row">
+      <div class="section-title-wrap without-tab">
+        <h2 class="section-title">Cambio exitoso</h2>
+        <p class="section-desc">Ha cambiado su contraseña exitosamente, puede ingresar nuevamente.</p>
+        <a href="{% url 'login' %}" class="btn btn-custom-size lg-size btn-pronia-primary">Login</a>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
