--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,34 +1,51 @@
-{% extends "registration/layout.html" %}
-
+{% extends 'bases/base.html' %}
+{% load static %}
+{% block title %}Jaguarete Kaa - Reset Confirm{% endblock %}
 {% block content %}
-
 {% if validlink %}
-        <p>Ingrese (y confirme) su nuevo password.</p>
-        <form action="" method="post">
-            <div style="display:none">
-                <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+<main class="main-content">
+  {% include 'includes/breadcrumb.html' with title='Restablecer contraseña' subtitle='Reset confirm'%}
+  <div class="login-register-area section-space-y-axis-100">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-6">
+          <form action="" method="post">
+            {% csrf_token %}
+            <div class="login-form">
+              {% if form.errors %}
+              <p class="text-danger text-center">Introduzca una contraseña válida.</p>
+              {% endif %}
+              <div class="row">
+                <div class="col-lg-12">
+                  <label>Nueva contraseña*</label>
+                  {{ form.new_password1 }}
+                </div>
+                <div class="col-lg-12">
+                  <label>Confirmar*</label>
+                  {{ form.new_password2 }}
+                </div>
+                <div class="col-lg-12">
+                  <button type="submit" class="btn btn-custom-size lg-size btn-pronia-primary">Restablecer</button>
+                </div>
+              </div>
             </div>
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">Nuevo password:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirmar password:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Cambiar mi password" /></td>
-                </tr>
-            </table>
-        </form>
-        
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 {% else %}
-    <h1> Error al restablecer el password </h1>
-    <p> El enlace para restablecer la contraseña no es válido, posiblemente porque ya se ha utilizado. Solicite un nuevo restablecimiento de contraseña. </p>
+<div class="shop-area section-space-y-axis-100">
+  <div class="container">
+    <div class="row">
+      <div class="section-title-wrap without-tab">
+        <h2 class="section-title">Enlace invalido</h2>
+        <p class="section-desc">El enlace para restablecer la contraseña no es válido, posiblemente porque ya se ha utilizado. Solicite un nuevo restablecimiento de contraseña.</p>
+        <a href="{% url 'store:home' %}" class="btn btn-custom-size lg-size btn-pronia-primary">Continuar</a>
+      </div>
+    </div>
+  </div>
+</div>
 {% endif %}
-<p><a href="{% url 'login' %}">Volver</a></p>
 {% endblock %}
