--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,8 +1,16 @@
-{% extends "registration/layout.html" %}
-
+{% extends 'bases/base.html' %}
+{% load static %}
+{% block title %}Jaguarete Kaa - Reset Done{% endblock %}
 {% block content %}
-
-<p> Le enviamos por correo electrónico instrucciones para configurar su contraseña. 
-    Si no han llegado en unos minutos, revise su carpeta de correo no deseado. </p>
-
+<div class="shop-area section-space-y-axis-100">
+  <div class="container">
+    <div class="row">
+      <div class="section-title-wrap without-tab">
+        <h2 class="section-title">Correo enviado!</h2>
+        <p class="section-desc">Le enviamos por correo electrónico instrucciones para configurar su contraseña. Si no han llegado en unos minutos, revise su carpeta de correo no deseado.</p>
+        <a href="{% url 'store:home' %}" class="btn btn-custom-size lg-size btn-pronia-primary">Continuar</a>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
