--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,3 +1,5 @@
 Alguien solicitó el restablecimiento de la contraseña del correo electrónico {{email}}. 
 Siga el enlace a continuación:
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+Si Usted no solicito el cambio comuniquese con nosotros a d.cruz@outlook.com
+Gracias...
