--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,16 +1,33 @@
-{% extends "registration/layout.html" %}
-
+{% extends 'bases/base.html' %}
+{% load static %}
+{% block title %}Jaguarete Kaa - Reset Password{% endblock %}
 {% block content %}
-
-<h1>Formulario para cambiar su clave</h1>
-<p>Debe ingresar el correo electrónico que usó al registrarse:</p>
-
-<form action="" method="post">{% csrf_token %}
-    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
-        <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
-</form>
-
-<p><a href="{% url 'login' %}">Volver al Login</a></p>
-
+<main class="main-content">
+  {% include 'includes/breadcrumb.html' with title='Restablecer contraseña' subtitle='Reset password'%}
+  <div class="login-register-area section-space-y-axis-100">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-6">
+          <form action="" method="post">
+            {% csrf_token %}
+            <div class="login-form">
+              {% if form.email.errors %}
+              <p class="text-danger text-center">Introduzca una dirección de correo electrónico válida.</p>
+              {% endif %}
+              <div class="row">
+                <div class="col-lg-12">
+                  <label>Email*</label>
+                  {{form.email}}
+                </div>
+                <div class="col-lg-12">
+                  <button type="submit" class="btn btn-custom-size lg-size btn-pronia-primary">Restablecer</button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 {% endblock %}
