--- a/order/templates/order/order_form.html
+++ b/order/templates/order/order_form.html
@@ -6,23 +6,7 @@
 <form method="post">
   {% csrf_token %}
   <main class="main-content">
-    <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-12">
-            <div class="breadcrumb-item">
-              <h2 class="breadcrumb-heading">Página de pago</h2>
-              <ul>
-                <li>
-                  <a href="{% url 'store:home' %}">Home</a>
-                </li>
-                <li>Checkout</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% include 'includes/breadcrumb.html' with title='Página de pago' subtitle='Checkout' %}
     <div class="checkout-area section-space-y-axis-100">
       <div class="container">
         <div class="row">
