--- a/producto/templates/producto/producto_detail.html
+++ b/producto/templates/producto/producto_detail.html
@@ -6,24 +6,7 @@
 <form method="post" action="{% url 'cart:add' producto.id %}">
   {% csrf_token %}
   <main class="main-content">
-    <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-12">
-            <div class="breadcrumb-item">
-              <h2 class="breadcrumb-heading">Detalle de producto</h2>
-              <ul>
-                <li>
-                  <a href="{% url 'store:home' %}">Home</a>
-                </li>
-                <li><a href="{% url 'producto:lista' %}">Productos</a></li>
-                <li>{{producto|title}}</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% include 'includes/breadcrumb.html' with title='Detalle de producto' subtitle=producto %}
     <div id="product-slider" class="single-product-area section-space-top-100">
       <div class="container">
         <div class="row">
@@ -47,6 +30,7 @@
               </div>
               <p class="short-desc">{{producto.descripcion|safe}}</p>
               <ul class="quantity-with-btn">
+                {% if perms.users.can_add_cart %}
                 <li class="quantity">
                   <div class="cart-plus-minus">
                     <input id="id_cantidad" name="cantidad" class="cart-plus-minus-box" value="1" type="text">
@@ -56,17 +40,16 @@
                   <button type="submit" class="btn btn-custom-size lg-size btn-pronia-primary">Add carrito
                   </button>
                 </li>
+                {% endif %}
                 {% if perms.producto.change_producto %}
                 <li class="wishlist-btn-wrap">
-                  <a class="custom-circle-btn" href="{% url 'producto:actualizar' producto.slug %}">
-                    <i class="pe-7s-pen"></i>
+                  <a class="btn btn-custom-size lg-size btn-pronia-primary" href="{% url 'producto:actualizar' producto.slug %}">Actualizar
                   </a>
                 </li>
                 {% endif %}
                 {% if perms.producto.delete_producto %}
                 <li class="compare-btn-wrap">
-                  <a class="custom-circle-btn" href="{% url 'producto:eliminar' producto.slug %}">
-                    <i class="pe-7s-trash"></i>
+                  <a class="btn btn-custom-size lg-size btn-pronia-secondary" href="{% url 'producto:eliminar' producto.slug %}">Eliminar
                   </a>
                 </li>
                 {% endif %}
