--- a/store/templates/store/403.html
+++ b/store/templates/store/403.html
@@ -1,29 +1,16 @@
 {% extends 'bases/base.html' %}
-{% block title %} Error 403 • Jaguarete Kaa {% endblock %}
-{% block section %}
-<section class="jumbotron text-center">
+{% block title %} JaguaShop - Error 403{% endblock %}
+{% block content %}
+<div class="shop-area section-space-y-axis-100">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center">
-        <div class="text-center my-lg-4 ">
-          <div class="text-center ">
-            <i class="fa fa-bug" style="font-size: 5em; padding-right: 5px"></i>
-            <span class="text-center" style="font-size: 5em;">403</span>
-            <h1>Acceso Denegado</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-{% endblock %}
-{% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-12 col-lg-10 col-xl-7 m-auto">
-      <div class="shadow-sm bg-white rounded text-center p-3 p-md-3 p-lg-3 p-xl-3">
+      <div class="section-title-wrap without-tab">
+        <h2 class="section-title">
+          <i class="fa fa-bug" style="font-size: 3em; padding-right: 5px"></i>
+          <span class="text-center" style="font-size: 3em;">403</span>
+        </h2>
         <p>Lo sentimos, no tiene permisos para realizar esta acción.
-          <br>Por favor comuniquese con el <a href="#">Administrador</a>
+          <br>Por favor comuniquese con un <a href="#">Administrador</a>
         </p>
         <p class="small">
           Para acceder a esta página, necesita iniciar sesión con una cuenta diferente.<br>
