--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -3,39 +3,22 @@
 {% block title %}Jaguarete Kaa - About{% endblock %}
 {% block content %}
 <main class="main-content">
-<div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
-  <div class="container h-100">
-    <div class="row h-100">
-      <div class="col-lg-12">
-        <div class="breadcrumb-item">
-          <h1 class="breadcrumb-heading">Quienes Somos</h1>
-          <ul>
-            <li>
-              <a href="{% url 'store:home' %}">Home</a>
-            </li>
-            <li>Acerca de</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="about-area section-space-top-95">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="about-content">
-          <h2 class="about-title">Nuestra <span>Historia</span></h2>
-          <p class="about-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrudexercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolorin reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteursint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id estlaborum. Sed ut perspiciatis</p>
-          <div class="about-signature">
-            <img src="{% static 'store/images/2.png' %}" alt="Signature">
+  {% include 'includes/breadcrumb.html' with title='Quienes Somos' subtitle='Acerca de'%}
+  <div class="about-area section-space-top-95">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="about-content">
+            <h2 class="about-title">Nuestra <span>Historia</span></h2>
+            <p class="about-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrudexercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolorin reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteursint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id estlaborum. Sed ut perspiciatis</p>
+            <div class="about-signature">
+              <img src="{% static 'store/images/2.png' %}" alt="Signature">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </main>
 {% include 'includes/shipping.html' %}
-
 {% endblock %}
