--- a/store/templates/store/buscar.html
+++ b/store/templates/store/buscar.html
@@ -3,23 +3,7 @@
 {% block title %}Jaguarete Kaa - Productos{% endblock %}
 {% block content %}
 <main class="main-content">
-  <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
-    <div class="container h-100">
-      <div class="row h-100">
-        <div class="col-lg-12">
-          <div class="breadcrumb-item">
-            <h2 class="breadcrumb-heading">Productos</h2>
-            <ul>
-              <li>
-                <a href="{% url 'store:home' %}">Home</a>
-              </li>
-              <li>Lista de productos</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include 'includes/breadcrumb.html' with title='Productos' subtitle='Lista de productos'%}
   <div class="shop-area section-space-y-axis-100">
     <div class="container">
       <div class="row">
@@ -37,7 +21,7 @@
                   </li>
                   {% for cat in categories %}
                   <li>
-                    <a class="{% if categoria == cat %}selection{% endif %}" href="{{ cat.get_absolute_url }}">
+                    <a class="nav-link {% if categoria == cat %}active{% endif %}" href="{{ cat.get_absolute_url }}">
                       <i class="fa fa-chevron-right"></i>
                       {{cat|title}}
                     </a>
@@ -65,15 +49,19 @@
                             </a>
                           </li>
                           <li>
-                            <a href="#" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                            <a href="{{p.get_absolute_url}}" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
                               <i class="pe-7s-look"></i>
                             </a>
                           </li>
+                          {% if perms.users.can_add_cart %}
                           <li>
-                            <a href="#" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
-                              <i class="pe-7s-cart"></i>
-                            </a>
+                            <form method="post" action="{% url 'cart:add' p.id %}">
+                              {% csrf_token %}
+                              <input type="hidden" name="cantidad" class="form-control" required="" id="id_cantidad" value="1">
+                              <a href="#" onClick="javascript:this.parentNode.submit()"><i class="pe-7s-cart" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder"></i></a>
+                            </form>
                           </li>
+                          {% endif %}
                         </ul>
                       </div>
                     </div>
