--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,23 +3,7 @@
 {% block title %}Jaguarete Kaa - Login{% endblock %}
 {% block content %}
 <main class="main-content">
-  <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
-    <div class="container h-100">
-      <div class="row h-100">
-        <div class="col-lg-12">
-          <div class="breadcrumb-item">
-            <h2 class="breadcrumb-heading">Login</h2>
-            <ul>
-              <li>
-                <a href="{% url 'store:home' %}">Home</a>
-              </li>
-              <li>Login</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include 'includes/breadcrumb.html' with title='Login' subtitle='Login'%}
   <div class="login-register-area section-space-y-axis-100">
     <div class="container">
       {% if form.errors %}
@@ -47,7 +31,7 @@
                 </div>
                 <div class="col-md-4 pt-1 mt-md-0">
                   <div class="forgotton-password_info">
-                    <a href="#"> Olvido su contraseña?</a>
+                    <a href="{% url 'password_reset' %}"> Olvido su contraseña?</a>
                   </div>
                 </div>
                 <div class="col-lg-12 pt-5">
@@ -57,83 +41,8 @@
             </div>
           </form>
         </div>
-        <!-- <div class="col-lg-6 pt-5 pt-lg-0">
-          <form action="#">
-            <div class="login-form">
-              <h4 class="login-title">Register</h4>
-              <div class="row">
-                <div class="col-md-6 col-12">
-                  <label>First Name</label>
-                  <input type="text" placeholder="First Name">
-                </div>
-                <div class="col-md-6 col-12">
-                  <label>Last Name</label>
-                  <input type="text" placeholder="Last Name">
-                </div>
-                <div class="col-md-12">
-                  <label>Email Address*</label>
-                  <input type="email" placeholder="Email Address">
-                </div>
-                <div class="col-md-6">
-                  <label>Password</label>
-                  <input type="password" placeholder="Password">
-                </div>
-                <div class="col-md-6">
-                  <label>Confirm Password</label>
-                  <input type="password" placeholder="Confirm Password">
-                </div>
-                <div class="col-12">
-                  <button class="btn btn-custom-size lg-size btn-pronia-primary">Register</button>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div> -->
       </div>
     </div>
   </div>
 </main>
-<!-- <div class="container">
-  <div class="row rounded align-items-center mb-5">
-    <div class="col-12 col-lg-6 m-auto">
-      <div class="shadow-sm bg-white rounded">
-        <div class="p-3 p-md-3">
-          {% if next %}
-          {% if user.is_authenticated %}
-          <p class="text-danger text-center">Tu cuenta no tiene acceso a esta página. Para proceder, por favor inicie sesión con una cuenta que tenga acceso.</p>
-          {% else %}
-          <p class="text-danger text-center">Inicie sesión para ver esta página.</p>
-          {% endif %}
-          {% endif %}
-          <form method="post" action="" class="">
-            {% csrf_token %}
-            <div>
-              <div class="form-group">
-                <label for="">Usuario</label>
-                <input type="text" name="username" autofocus maxlength="150" autocomplete="off" required id="id_username" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="">Constraseña</label>
-                <input type="password" name="password" autocomplete="off" required id="id_password" class="form-control">
-              </div>
-              <div class="form-group row pt-0 pt-md-3">
-                <div class="col-6">
-                  <span class="">
-                    <label><input type="checkbox" id="cbox1" value="first_checkbox" class=""> Recordarme</label>
-                  </span>
-                </div>
-                <div class="col-6 text-right">
-                  <a id="" href="#">Olvido su contraseña?</a>
-                </div>
-              </div>
-              <div class="text-center">
-                <input type="submit" name="" value="Iniciar Sesion" id="inputLogin" class="btn btn-lg btn-primary mb-0 mt-lg-0" />
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
 {% endblock content %}
