--- a/templates/registration/registro.html
+++ b/templates/registration/registro.html
@@ -5,23 +5,7 @@
 <form method="post" action="{% url 'users:register' %}" enctype="multipart/form-data">
   {% csrf_token %}
   <main class="main-content">
-    <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-12">
-            <div class="breadcrumb-item">
-              <h2 class="breadcrumb-heading">Nuevo usuario</h2>
-              <ul>
-                <li>
-                  <a href="{% url 'store:home' %}">Home</a>
-                </li>
-                <li>Registro</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% include 'includes/breadcrumb.html' with title='Nuevo usuario' subtitle='Registro'%}
     <div class="login-register-area section-space-y-axis-100">
       <div class="container">
         <div class="row">
@@ -39,11 +23,11 @@
                   {{form.first_name}}
                 </div>
                 <div class="col-lg-6">
-                  <label>Apellidos</label>
+                  <label>Apellidos*</label>
                   {{form.last_name}}
                 </div>
                 <div class="col-lg-12">
-                  <label>Dirección</label>
+                  <label>Dirección*</label>
                   {{form.direction}}
                 </div>
                 <div class="col-lg-6">
@@ -66,19 +50,19 @@
               <h4 class="login-title">User Info</h4>
               <div class="row">
                 <div class="col-md-6 col-12">
-                  <label>Username</label>
+                  <label>Username*</label>
                   {{form.username}}
                 </div>
                 <div class="col-md-12">
-                  <label>Email Address*</label>
+                  <label>Email*</label>
                   {{form.email}}
                 </div>
                 <div class="col-md-6">
-                  <label>Password</label>
+                  <label>Password*</label>
                   {{form.password1}}
                 </div>
                 <div class="col-md-6">
-                  <label>Confirm Password</label>
+                  <label>Confirmar Password*</label>
                   {{form.password2}}
                 </div>
                 <div class="col-6">
