--- a/store/templates/includes/footer.html
+++ b/store/templates/includes/footer.html
@@ -101,7 +101,7 @@
         <div class="col-lg-12">
           <div class="copyright">
             <span class="copyright-text">© 2021 Jaguarete Kaa S.A. Developed with <i class="fa fa-heart text-danger"></i> by
-              <a href="https://diegoosvaldo.me/" rel="noopener" target="_blank">diegoosvaldo85</a> </span>
+              <a href="https://diegoosvaldo.xyz/" rel="noopener" target="_blank">diegoosvaldo85</a> </span>
           </div>
         </div>
       </div>
